ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: silver-chainsaw-prometheus
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: silver-chainsaw-prometheus
                port:
                  number: 9090
